# docs/swagger.json
@@ -1297,6 +1297,72 @@
                 }
             }
         },
+        "/api/v1/navs/down/{order_id}": {
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "向移下动菜单",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order_id",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "100": {
+                        "description": "Continue",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Result"
+                        }
+                    },
+                    "104": {
+                        "schema": {
+                            "$ref": "#/definitions/utils.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/navs/up/{order_id}": {
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "菜单"
+                ],
+                "summary": "向上移动菜单",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "order_id",
+                        "name": "order_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "100": {
+                        "description": "Continue",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Result"
+                        }
+                    },
+                    "104": {
+                        "schema": {
+                            "$ref": "#/definitions/utils.Result"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/navs/{id}": {
             "delete": {
                 "consumes": [
@@ -2280,7 +2346,6 @@
         "forms.NavAddForm": {
             "type": "object",
             "required": [
-                "icon",
                 "name",
                 "url"
             ],
@@ -2305,7 +2370,6 @@
         "forms.NavEditForm": {
             "type": "object",
             "required": [
-                "icon",
                 "id",
                 "name",
                 "url"
